# grafiek

./: .gitignore  CMakeLists.txt  KANBAN.md  build.sh  compile_commands.json
.cache/clangd/index/: canvas.hpp.7ABDFEDC260A090B.idx  color.hpp.811E104733DECB04.idx  draw.cpp.B36DE49DE8EEACED.idx  draw.hpp.0F5A01946122BCF9.idx  element.hpp.FFD7C4AF5017EC9B.idx  font.cpp.F28D3A414C6375A4.idx  font.hpp.2B60E28DC24F3390.idx  hex.cpp.7D22408993CC0FD4.idx  normalize.hpp.CC4086EF007E5A75.idx  overload.hpp.300398D40A4ED9DF.idx  plot.hpp.8E685353654C37B9.idx  square.hpp.95582E2DF6E2F1B9.idx  test.cpp.B380031B36AB50BA.idx
__build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  grafiek
font/: makefont.py
src/: test.cpp
src/canvas/: canvas.hpp  font.cpp  font.hpp
src/color/: color.hpp  hex.cpp
src/draw/: addBackground.cpp  addHeader.cpp  addPlot.cpp  addSize.cpp  addSquare.cpp  draw.cpp  draw.hpp
src/element/: element.hpp  plot.hpp  square.hpp
src/helper/: normalize.hpp  overload.hpp
